Refactor: 개인 투자 내역 조회